Made user card smaller Fixed user and card text overflow

--- a/neuro_arcade/reactapp/src/styles/components/Card.module.css
+++ b/neuro_arcade/reactapp/src/styles/components/Card.module.css
@@ -41,6 +41,16 @@
         margin: auto 0;
         color: #FFFFFF;
         padding: 0 0.5em;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+}
+
+#nav {
+    scale: 80%;
+    .Text {
+        font-size: 1.25em;
+        width: 4.6em;
     }
 }
 
